--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ anthropic = "^0.25.0"
 keyring = "^25.2.1"
 inquirer = "^3.2.3"
 watchdog = "^4.0.0"
+python-dotenv = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
