--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "askit", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12, <3.14"
 typer = "^0.12.3"
 rich = "^13.7.1"
 pyyaml = "^6.0.1"
@@ -20,6 +20,7 @@ python-dotenv = "^1.1.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 ipython = "^8.24.0"
+pyinstaller = "^6.14.1"
 
 [build-system]
 requires = ["poetry-core"]
