--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,72 +8,137 @@ on:
       - 'v*.*.*' # Déclenche le workflow quand un tag comme v1.0.0 est poussé
 
 jobs:
-  build-and-release:
-    name: Build and Release
+  verify:
+    name: Verify and Test
     runs-on: ubuntu-latest
-    permissions:
-      contents: write # Requis pour créer la Release
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }} # Rend l'URL de la release disponible pour les autres jobs
-
     steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.12' }
+      - uses: snok/install-poetry@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-  build-binaries:
-    name: Build binary for ${{ matrix.os }}
-    needs: build-and-release # Dépend du job qui crée la release
-    runs-on: ${{ matrix.os }}
-    permissions:
-      contents: write # Requis pour téléverser les fichiers (assets)
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        include:
-          - os: ubuntu-latest
-            asset_path: dist/askit-cli
-            asset_name: askit-cli-linux
-          - os: macos-latest
-            asset_path: dist/askit-cli
-            asset_name: askit-cli-macos
-          - os: windows-latest
-            asset_path: dist/askit-cli.exe
-            asset_name: askit-cli-windows.exe
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-
+          version: 1.7.1
+          virtualenvs-create: true
       - name: Install dependencies
         run: poetry install
         shell: bash
+      - name: Run tests
+        run: poetry run pytest
+        shell: bash
 
+  create-release:
+    name: Create Release
+    needs: verify
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+    steps:
+      - uses: softprops/action-gh-release@v2
+        id: create_release
+        with:
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+
+  build-windows:
+    name: Build for Windows (.exe)
+    needs: create-release
+    runs-on: windows-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.12' }
+      - uses: snok/install-poetry@v1
+        with:
+          version: 1.7.1
+          virtualenvs-create: true
+      - name: Install dependencies
+        run: poetry install
+        shell: bash
       - name: Build with PyInstaller
         run: poetry run pyinstaller src/askit/cli.py --name askit-cli --onefile --clean
         shell: bash
-
       - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
-          upload_url: ${{ needs.build-and-release.outputs.upload_url }}
-          asset_path: ${{ matrix.asset_path }}
-          asset_name: ${{ matrix.asset_name }}
-          asset_content_type: application/octet-stream 
+          files: dist/askit-cli.exe
+          name: askit-cli-windows.exe
+
+  build-linux:
+    name: Build for Linux (.deb)
+    needs: create-release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.12' }
+      - uses: snok/install-poetry@v1
+        with:
+          version: 1.7.1
+          virtualenvs-create: true
+      - name: Install dependencies
+        run: poetry install
+        shell: bash
+      - name: Build and package .deb
+        run: |
+          poetry run pyinstaller src/askit/cli.py --name askit-cli --onefile --clean
+          VERSION=$(echo "${{ github.ref }}" | sed 's/refs\/tags\/v//')
+          mkdir -p staging/DEBIAN
+          mkdir -p staging/usr/local/bin
+          cp dist/askit-cli staging/usr/local/bin/
+          cat <<EOF > staging/DEBIAN/control
+          Package: askit-cli
+          Version: $VERSION
+          Architecture: amd64
+          Maintainer: Your Name <you@example.com>
+          Description: A command-line assistant that uses AI to provide suggestions for shell commands.
+          EOF
+          dpkg-deb --build staging askit-cli-linux.deb
+        shell: bash
+      - name: Upload Release Asset
+        uses: softprops/action-gh-release@v2
+        with:
+          files: askit-cli-linux.deb
+          name: askit-cli-linux.deb
+
+  build-macos:
+    name: Build for macOS (Apple Silicon)
+    needs: create-release
+    runs-on: macos-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.12' }
+      - uses: snok/install-poetry@v1
+        with:
+          version: 1.7.1
+          virtualenvs-create: true
+      - name: Install dependencies
+        run: poetry install
+        shell: bash
+      - name: Build for Apple Silicon
+        run: |
+          # Build for Apple Silicon (M1/M2/M3)
+          poetry run pyinstaller src/askit/cli.py --name askit-cli --onefile --clean --target-arch arm64
+          # Create DMG
+          brew install create-dmg
+          create-dmg \
+            --volname "AskIT CLI (Apple Silicon)" \
+            --window-size 600 300 \
+            --icon-size 96 \
+            "askit-cli-macos-m-series.dmg" \
+            "dist/"
+        shell: bash
+      - name: Upload Release Asset
+        uses: softprops/action-gh-release@v2
+        with:
+          files: askit-cli-macos-m-series.dmg
+          name: askit-cli-macos-m-series.dmg 
