--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,18 +43,16 @@ jobs:
       - name: Build with PyInstaller
         run: poetry run pyinstaller src/askit/cli.py --name askit-cli --onefile --clean
         shell: bash
-      - name: Rename asset
-        run: Rename-Item -Path dist/askit-cli.exe -NewName "askit-cli-${{ github.ref_name }}-windows-x86_64.exe"
+      - name: Rename and prepare artifact
+        run: |
+          Rename-Item -Path dist/askit-cli.exe -NewName "askit-cli-${{ github.ref_name }}-windows-x86_64.exe"
+          mkdir -p ../artifacts
+          Copy-Item -Path dist/askit-cli-${{ github.ref_name }}-windows-x86_64.exe -Destination ../artifacts
         shell: pwsh
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/upload-artifact@v4
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: dist/askit-cli-${{ github.ref_name }}-windows-x86_64.exe
-          asset_name: askit-cli-${{ github.ref_name }}-windows-x86_64.exe
-          asset_content_type: application/vnd.microsoft.portable-executable
+          name: windows-build
+          path: artifacts/
 
   build-linux:
     name: Build for Linux (amd64)
@@ -88,17 +86,12 @@ jobs:
           Maintainer: Your Name <you@example.com>
           Description: A command-line assistant that uses AI to provide suggestions for shell commands.
           EOF
-          dpkg-deb --build staging askit-cli-${VERSION}-linux-amd64.deb
+          dpkg-deb --build staging ../askit-cli-${VERSION}-linux-amd64.deb
         shell: bash
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/upload-artifact@v4
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: askit-cli-${{ github.ref_name }}-linux-amd64.deb
-          asset_name: askit-cli-${{ github.ref_name }}-linux-amd64.deb
-          asset_content_type: application/vnd.debian.binary-package
+          name: linux-build
+          path: askit-cli-${{ github.ref_name }}-linux-amd64.deb
 
   build-macos:
     name: Build for macOS (pkg)
@@ -135,14 +128,32 @@ jobs:
                    --install-location "/" \
                    --identifier "io.github.askit-ai.askit-cli" \
                    --version "$PKG_VERSION" \
-                   "askit-cli-${VERSION}-macos-arm64.pkg"
+                   "../askit-cli-${VERSION}-macos-arm64.pkg"
         shell: bash
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/upload-artifact@v4
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: askit-cli-${{ github.ref_name }}-macos-arm64.pkg
-          asset_name: askit-cli-${{ github.ref_name }}-macos-arm64.pkg
-          asset_content_type: application/x-newton-compatible-pkg 
+          name: macos-build
+          path: askit-cli-${{ github.ref_name }}-macos-arm64.pkg
+
+  release:
+    name: Create Final Release
+    needs: [build-windows, build-linux, build-macos]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Download all build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+      
+      - name: List files
+        run: find artifacts -type f
+
+      - name: Create Release and Upload Assets
+        uses: softprops/action-gh-release@v2
+        with:
+          files: artifacts/**/*
+          generate_release_notes: true
+          draft: false
+          prerelease: false 
