--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,33 @@
 # .github/workflows/release.yml
 
-name: Create Release and Build Binaries
+name: Build, Test, and Release
 
 on:
   push:
+    branches:
+      - main
     tags:
-      - 'v*.*.*' # Déclenche le workflow quand un tag comme v1.0.0 est poussé
+      - 'v*.*.*'
 
 jobs:
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.12' }
+      - uses: snok/install-poetry@v1
+        with:
+          version: 1.7.1
+          virtualenvs-create: true
+      - name: Install dependencies
+        run: poetry install
+        shell: bash
+      - name: Run tests
+        run: poetry run pytest
+        shell: bash
+
   create-release:
     name: Create Release
     runs-on: ubuntu-latest
@@ -25,7 +45,8 @@ jobs:
 
   build-windows:
     name: Build for Windows (x86_64)
-    needs: create-release
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v') # Only run on tag pushes
     runs-on: windows-latest
     permissions:
       contents: write
@@ -56,7 +77,8 @@ jobs:
 
   build-linux:
     name: Build for Linux (amd64)
-    needs: create-release
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v') # Only run on tag pushes
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -95,7 +117,8 @@ jobs:
 
   build-macos:
     name: Build for macOS (pkg)
-    needs: create-release
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v') # Only run on tag pushes
     runs-on: macos-latest
     permissions:
       contents: write
@@ -138,6 +161,7 @@ jobs:
   release:
     name: Create Final Release
     needs: [build-windows, build-linux, build-macos]
+    if: startsWith(github.ref, 'refs/tags/v') # Only run on tag pushes
     runs-on: ubuntu-latest
     permissions:
       contents: write
