--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-dotenv = "^1.1.0"
 pytest = "^8.2.0"
 ipython = "^8.24.0"
 pyinstaller = "^6.14.1"
+pytest-mock = "^3.12.0"
 
 [build-system]
 requires = ["poetry-core"]
