--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "askit", from = "src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.12, <3.14"
-typer = "^0.12.3"
+typer = {extras = ["all"], version = "^0.16.0"}
 rich = "^13.7.1"
 pyyaml = "^6.0.1"
 anthropic = "^0.25.0"
