--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,17 +13,23 @@ jobs:
   test:
     name: Run Tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.12"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: '3.12' }
-      - uses: snok/install-poetry@v1
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          version: 1.7.1
-          virtualenvs-create: true
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install and update Poetry
+        run: |
+          pipx install poetry
+          poetry self update
+
       - name: Install dependencies
-        run: poetry install
-        shell: bash
+        run: poetry install --no-root
       - name: Run tests
         run: poetry run pytest
         shell: bash
@@ -33,14 +39,21 @@ jobs:
     needs: test
     if: startsWith(github.ref, 'refs/tags/v') # Only run on tag pushes
     runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: ["3.12"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: '3.12' }
-      - uses: snok/install-poetry@v1
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          version: 1.7.1
-          virtualenvs-create: true
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install and update Poetry
+        run: |
+          pipx install poetry
+          poetry self update
+
       - name: Install dependencies
         run: poetry install
         shell: bash
@@ -66,18 +79,26 @@ jobs:
     needs: test
     if: startsWith(github.ref, 'refs/tags/v') # Only run on tag pushes
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.12"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: '3.12' }
-      - uses: snok/install-poetry@v1
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          version: 1.7.1
-          virtualenvs-create: true
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install and update Poetry
+        run: |
+          pipx install poetry
+          poetry self update
+
       - name: Install dependencies
-        run: poetry install
-        shell: bash
-      - name: Build and package .deb
+        run: |
+          poetry install
+
+      - name: Build Linux binary
         run: |
           poetry run pyinstaller run_cli.py --paths src --name askit-cli --onefile --clean
           VERSION=${{ github.ref_name }}
@@ -107,18 +128,25 @@ jobs:
     needs: test
     if: startsWith(github.ref, 'refs/tags/v') # Only run on tag pushes
     runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: ["3.12"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: '3.12' }
-      - uses: snok/install-poetry@v1
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          version: 1.7.1
-          virtualenvs-create: true
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install and update Poetry
+        run: |
+          pipx install poetry
+          poetry self update
+
       - name: Install dependencies
         run: poetry install
         shell: bash
-      - name: Build and package .pkg
+      - name: Build macOS package
         run: |
           # Build binary for Apple Silicon
           poetry run pyinstaller run_cli.py --paths src --name askit-cli --onefile --clean --target-arch arm64
