fix(ci): Use snok/install-poetry action to get latest version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install and update Poetry
-        run: |
-          pipx install poetry
-          poetry self update
+      - name: Install latest Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
 
       - name: Install dependencies
         run: poetry install --no-root
@@ -49,10 +49,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install and update Poetry
-        run: |
-          pipx install poetry
-          poetry self update
+      - name: Install latest Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
 
       - name: Install dependencies
         run: poetry install
@@ -89,10 +89,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install and update Poetry
-        run: |
-          pipx install poetry
-          poetry self update
+      - name: Install latest Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
 
       - name: Install dependencies
         run: |
@@ -138,10 +138,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install and update Poetry
-        run: |
-          pipx install poetry
-          poetry self update
+      - name: Install latest Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
 
       - name: Install dependencies
         run: poetry install
