--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install latest Poetry
         uses: snok/install-poetry@v1
         with:
-          version: latest
+          version: 1.8.2
 
       - name: Install dependencies
         run: poetry install --no-root
@@ -52,7 +52,7 @@ jobs:
       - name: Install latest Poetry
         uses: snok/install-poetry@v1
         with:
-          version: latest
+          version: 1.8.2
 
       - name: Install dependencies
         run: poetry install
@@ -92,7 +92,7 @@ jobs:
       - name: Install latest Poetry
         uses: snok/install-poetry@v1
         with:
-          version: latest
+          version: 1.8.2
 
       - name: Install dependencies
         run: |
@@ -141,7 +141,7 @@ jobs:
       - name: Install latest Poetry
         uses: snok/install-poetry@v1
         with:
-          version: latest
+          version: 1.8.2
 
       - name: Install dependencies
         run: poetry install
