--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           version: 1.8.2
 
       - name: Install dependencies
-        run: poetry install --no-root
+        run: poetry install
       - name: Run tests
         run: poetry run pytest
         shell: bash
