--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
         run: poetry install
         shell: bash
       - name: Build with PyInstaller
-        run: poetry run pyinstaller run_cli.py --paths src --name askit-cli --onefile --clean
+        run: poetry run pyinstaller run_cli.py --paths src --name askit-cli --onefile --clean --exclude-module tkinter --exclude-module matplotlib --exclude-module numpy --exclude-module scipy --exclude-module PIL --exclude-module IPython
         shell: bash
       - name: Post-build smoke test
         run: .\dist\askit-cli.exe config --help
@@ -100,7 +100,7 @@ jobs:
 
       - name: Build Linux binary
         run: |
-          poetry run pyinstaller run_cli.py --paths src --name askit-cli --onefile --clean
+          poetry run pyinstaller run_cli.py --paths src --name askit-cli --onefile --clean --exclude-module tkinter --exclude-module matplotlib --exclude-module numpy --exclude-module scipy --exclude-module PIL --exclude-module IPython
           VERSION=${{ github.ref_name }}
           DEBIAN_VERSION=${VERSION#v}
           mkdir -p staging/DEBIAN
@@ -148,8 +148,8 @@ jobs:
         shell: bash
       - name: Build macOS package
         run: |
-          # Build binary for Apple Silicon
-          poetry run pyinstaller run_cli.py --paths src --name askit-cli --onefile --clean --target-arch arm64
+          # Build binary for Apple Silicon with optimizations
+          poetry run pyinstaller run_cli.py --paths src --name askit-cli --onefile --clean --target-arch arm64 --exclude-module tkinter --exclude-module matplotlib --exclude-module numpy --exclude-module scipy --exclude-module PIL --exclude-module IPython
           
           # Create a staging directory for the PKG
           mkdir -p staging/usr/local/bin
